[package]
name = "tf-eager-sample"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"

[dependencies.tensorflow]
git = "https://github.com/dskkato/rust"
tag = "eager-0.17.0-alpha.1"
features = [ "eager" ]
